--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "react-toastify": "^9.1.3"
   },
   "devDependencies": {
+    "@types/node": "^20.4.9",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
